main/interfaces/Plush/templates/static/stylesheets/plush-default.css
body {
	background-color: #B1B1B1;
	font-family: arial, "lucida console", sans-serif;
	opacity: .9999;
}

select, input {
	border: 0px;
	background: #333;
	color: #FFDF00;
	display:inline;
}

ul, li, p, h1, h2, h3 { margin: 0; padding: 0; list-style: none; }

#config_menu_upper {
	text-align: center;
	font-size: 66%;
	padding-bottom:6px;
}
#config_menu_upper ul {
	padding-left:20px;
}
#config_menu_upper li {
	display:inline;
	padding-right:20px;
}
#config_menu_upper a {
	color:black;
	text-decoration:none;
	border-bottom: 1px dotted grey;
}
#config_menu_upper a:hover {
	border-bottom: 1px solid black;
}
#add_nzb_menu_toggle_upper {
	cursor:pointer;
	text-align:center;
	font-size: 66%;
	color:#CCC;
}
#add_nzb_menu_toggle_upper:hover span {
	color:black;
	border-left: 1px dotted black;
	border-right: 1px dotted black;
	padding-left:4px;
	padding-right:4px;
}
#new_release_notification {
	text-align: center;
}
#new_release_notification a {
	background-color: darkgreen;
	font-weight:bold;
	color:#FFF;
	text-decoration: none;
	border-bottom: 1px dashed #FFF;
	padding:4px;
}

.add_nzb_item {
	display:inline-block;
}

#add_nzb_menu {
	text-align: center;
}

#add_nzb_menu div {
	color: #606060;
	padding: 5px;
	display: inline-block;
	width: 80%;
}

#add_nzb_box {
	background-color:#E0E0E0;
	border-right: 4px solid #CFCFCF;
	cursor:default;
	border-left: 4px solid #CFCFCF;
	border-top: 4px solid #CFCFCF;
	line-height: 25px;
}
#addID {
	cursor:pointer;
}
#uploadNZBForm {
	display:inline;
}
#addNZBbyFile {
	cursor:pointer;
}
#refreshRate-option {
	font-size:100%;
	text-align: right;
	width:85px;
}
#maxSpeed-option {
	font-size:100%;
	padding:2px;
	width: 40px;
	text-align: center;
}
#refreshRate-option option {
}
#onQueueFinish-option {
	margin-left:8px;
	width:140px;
	font-size:100%;
}
#sort_by_avg_age {
	cursor:pointer;
}
#sort_by_name {
	cursor:pointer;
}
#sort_by_size {
	cursor:pointer;
}
#queue_purge {
	cursor:pointer;
}
#help_irc {
	cursor:pointer;
}
#shutdown_sabnzbd {
	cursor:pointer;
}
#warning_message {
	text-align:center;
	background-color: red;
	color: white;
}




#stats_noofslots {
	display:none;
}





.box_fatbottom {
	height:37px;
	font-size: 66%;
	color: #606060;
	text-align:center;
}
.box_fatbottom div {
	padding:12px 16px 0 20px;
	cursor:default;
}
.box_fatbottom .left_stats {
	float:left;
}
.box_fatbottom .right_stats {
	float:right;
}
.box_fatbottom strong {
	color: #000;
}
.stats_incomplete_freespace {
	padding-top:8px;
	padding-bottom:8px;
	padding-left:20px;
	background: url(../images/plush-default/q_stats_incomplete.png) 0 50% no-repeat;
}
.stats_incomplete_freespace_needspace {
	padding-top:8px;
	padding-bottom:8px;
	padding-left:20px;
	background: url(../images/plush-default/q_stats_needspace.png) 0 50% no-repeat;
	color:red;
}
.stats_complete_freespace {
	margin-left:10px;
	padding-top:8px;
	padding-bottom:8px;
	padding-left:20px;
	background: url(../images/plush-default/q_stats_complete.png) 0 50% no-repeat;
}
.stats_complete_freespace_needspace {
	margin-left:10px;
	padding-top:8px;
	padding-bottom:8px;
	padding-left:20px;
	background: url(../images/plush-default/q_stats_needspace.png) 0 50% no-repeat;
	color:red;
}

.history_logo {
	background: url(../images/plush-default/sabnzbdplus_plush.png) 50% 100% no-repeat;
}

.box_banner_menu {
	float:right;
	list-style:none;
	display:inline;
	margin: 10px 0;
	padding: 0;
}
.box_banner_menu li {
	float:right;
}
.q_menu_pause {
	margin-right:6px;
	padding-right:32px;
	padding-bottom:24px;
	cursor:pointer;
}
.q_menu_unpaused {
	background: url(../images/plush-default/q_pause.png) 0 0 no-repeat;
}
.q_menu_paused {
	background: url(../images/plush-default/q_pause_on.png) 0 0 no-repeat;
}
.q_menu_addnzb {
	padding-bottom:24px;
	margin-right:6px;
	padding-right:28px;
	cursor:pointer;
}
.q_menu_addnzb_on {
	background: url(../images/plush-default/qh_verbosity.png) 0 0 no-repeat;
}
.q_menu_addnzb_off {
	background: url(../images/plush-default/qh_verbosity.png) 0 0 no-repeat;
}
.q_menu_sort {
	width:55px;
	height: 55px;
	cursor:pointer;
}
.q_menu_sort.show { background: url(../images/plush-default/q_pill_sort.png) 0 0 no-repeat;}
.q_menu_verbose,.h_menu_verbose {
	background: url(../images/plush-default/qh_verbosity.png) 0 100% no-repeat;
	margin-right:6px;
	padding-right:28px;
	padding-bottom:24px;
	cursor:pointer;
	display:none;
}
.q_menu_purge {
	background: url(../images/plush-default/h_purge.png) 0 0 no-repeat;
	margin-right:6px;
	padding-right:28px;
	padding-bottom:24px;
	cursor:pointer;
	display:none;
}
.q_menu_purge.show { display: inline; }
.h_menu_purge {
	background: url(../images/plush-default/h_purge.png) 0 100% no-repeat;
	margin-right:6px;
	padding-right:28px;
	padding-bottom:24px;
	cursor:pointer;
	display:none;
}
.h_menu_purge.show { display: inline; }
.queue_logo {
	background: url(../images/plush-default/sabnzbdplus_logo.png) 50% 50% no-repeat;
	padding-left:240px;
	padding-right:240px;
	padding-bottom:50px;
	width: 90px;
	height: 40px;
}

.queue_pill_l {display:inline; background: url(../images/plush-default/q_pill_l.png) 0 0 no-repeat;padding-left:9px;}
.queue_pill_m {display:inline; background: url(../images/plush-default/q_pill_m.png) 0 0 repeat-x; width:100px; }
.queue_pill_r {display:inline; background: url(../images/plush-default/q_pill_r.png) 100% 0 no-repeat; height:51px;}


.queueTable {
	border-collapse: seperate;
	width: 100%;
	background-color: #e0e0e0;
	color: #606060;
	border-bottom: 1px solid #fff;
	border-spacing: 0px;
}
.queueTable tr {
	background-color: #e0e0e0;
	
}
.queueTable tr:hover {
	background-color: #f9f9f9;
	color: #000;
}
.queueTable td {
	vertical-align: middle;
	padding:2px 0;
	border-top: 1px solid #fff;
}
.queueTable td.download-title { width: 50%; }
.queueTable .title {
	height: 14px;
	width: 16px;
	margin: 2px 8px 0 4px;
	float:left;
	background: url(../images/plush-default/ql_grip.png) 0 50% no-repeat;
}
/* ... */

